# loop-assign

./: README.md  pyproject.toml
loop_assign/: app.py
loop_assign/db/: .env  __init__.py  crud.py  models.py  schemas.py
loop_assign/utils/: report.py  schemas.py
